--- a/spring-security-basic-auth/pom.xml
+++ b/spring-security-basic-auth/pom.xml
@@ -13,6 +13,10 @@
     <artifactId>spring-security-basic-auth</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <!-- Spring MVC -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
